using System;

namespace todoList.Entities
{
    public interface IEntity
    {
        public int Id { get; set; }
    }
}